# Docker_robot_appium

./: .dockerignore  Dockerfile  README.md  base.resource  dockerfile  log.html  output.xml  pyproject.toml  report.html  requirements.txt  teste.robot
resource/utils/: openApp.resource
results/: log.html  output.xml  report.html
test/: ted.robot
