[tool.poetry]
name = "ambiente-tests"
version = "0.1.0"
description = ""
authors = ["Eduardo Alves <eduardo.telecomrbs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
robotframework = "^7.1.1"
robotframework-appiumlibrary = "2.0.0"
appium-python-client = "^4.2.0"
docutils = "^0.21.2"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
